Give the possibility to update an existing card by modifying only some properties (#6456)
